infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  tls:
  - hosts:
    - www.mintapp.online
    secretName: blearn-tls
  rules:
    - host: www.mintapp.online
      http:
        paths:
          - path: /api/v1/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 3000
          - path: /api/v1/course/?(.*)
            pathType: Prefix
            backend:
              service:
                name: course-srv
                port:
                  number: 3000
          - path: /api/v1/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port:
                  number: 3000
          - path: /api/v1/valuation/?(.*)
            pathType: Prefix
            backend:
              service:
                name: valuation-srv
                port:
                  number: 3000
          - path: /api/v1/realtime/?(.*)
            pathType: Prefix
            backend:
              service:
                name: realtime-srv
                port:
                  number: 3000
          - path: /api/v1/upload/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cloud-srv
                port:
                  number: 3000

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.mintapp.online'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
